--- a/plan.html
+++ b/plan.html
@@ -49,7 +49,7 @@ scroll-behavior: smooth;">
         <img src="imgs/plan2.png" alt="">
         <img src="imgs/plan3.png" alt="">
         <img src="imgs/plan4.png" alt="">
-        <img src="imgs/plan5.1.jpg" alt="">
+        <img src="imgs/plan5.1.png" alt="">
         <video src="imgs/document.mp4" controls style="margin-left: 420px; margin-bottom: 20px; width:740px; height:490px; margin-top: -320px;"></video>     
     </div>
     
